<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <GVL Name="SLB_CmdState" Id="{4d3418b2-5611-4601-b28d-f0bf79406ca3}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	/// ctrl commands definitions
	/// specific commands >200 - every command has to be a even number
	cCMD_RELEASE: INT := 306;
	/// Empties all buffer zones
	cCMD_RELEASE_ALL: INT := 308;
	/// ctrl specific states definitions
	cSTA_RELEASE_ALLBusy: INT := 307;
	cSTA_RELEASE_ALL: INT := cCMD_RELEASE_ALL;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>