<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_Ctrl_SIf_HFE" Id="{edc547a8-e57f-4547-aed9-568f6e05e12d}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_HFE :
STRUCT
	///configuration
	Cfg: T_Ctrl_SIf_HFE_Cfg;
	///parameter
	Par: T_Ctrl_SIf_HFE_Par;
	///current values
	Cur: T_Ctrl_SIf_HFE_Cur;
	///alarm number used in this controller
	Alm: ARRAY[1..6] OF T_Ctrl_Alm;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>