<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_Ctrl_SIf_HFE_Cfg" Id="{ba24d5f8-bb29-4ef8-a902-f443beea5549}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_HFE_Cfg :
STRUCT
	/// Number of supportetd LDS
	uintNbOfLDS: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>