<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_Ctrl_SIf_HFE_Par" Id="{24458b85-e6a6-4813-b65a-582c68ec0269}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_HFE_Par :
STRUCT
	/// Waiting between SLB-STB Close and Junction open
	udiWaitingTime_ms: UDINT;
	/// Enable Junction to LDS
	a_bolEnableJunction: ARRAY[0..cuintMaxStation] OF BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>