<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_Ctrl_SIf_MTR_In" Id="{ef78a787-e893-4ad6-9000-a93fac269beb}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_MTR_In :
STRUCT
	/// Sensor hanger detected
	bolHangerDetected: T_Ctrl_IoBool;
	/// Sensor pin from new section is detected
	bolPinDetected: T_Ctrl_IoBool;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>